// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`goal cli escalation given: [case1] escalateMessageByCount when: [t0] count is below threshold then: returns gentle message for count 0 1`] = `"🦉 to forget an ask is to break a promise. remember."`;

exports[`goal cli escalation given: [case1] escalateMessageByCount when: [t1] count is at or above threshold then: returns escalated message for count 5 1`] = `"🦉 friend, you have been reminded many times. the work must be done."`;

exports[`goal cli help given: [case1] emitHelpOutput when: [t0] help is rendered then: output matches snapshot 1`] = `
"🦉 goal.memory.set — persist a goal

🔮 usage
   ├─ example: create goal
   │  ├─
   │  │
   │  │  rhx goal.memory.set \\
   │  │    --slug fix-typo \\
   │  │    --why.ask "fix the typo in readme" \\
   │  │    --why.purpose "docs should be correct" \\
   │  │    --why.benefit "users trust the project" \\
   │  │    --what.outcome "readme has no typos" \\
   │  │    --how.task "find and fix the typo" \\
   │  │    --how.gate "spell check passes" \\
   │  │    --source peer:human
   │  │
   │  └─
   │
   ├─ example: create goal (multiline)
   │  ├─
   │  │
   │  │  rhx goal.memory.set \\
   │  │    --slug refactor-auth-module \\
   │  │    --why.ask "refactor the auth module to use JWT tokens
   │  │      instead of session cookies for better stateless scale" \\
   │  │    --why.purpose "current session-based auth requires sticky
   │  │      sessions which limits horizontal scale options" \\
   │  │    --why.benefit "infrastructure can scale horizontally without
   │  │      session affinity, reduces costs and improves reliability" \\
   │  │    --what.outcome "auth module uses JWT tokens for all
   │  │      authentication flows, sessions are stateless" \\
   │  │    --how.task "1. add JWT library, 2. update auth middleware,
   │  │      3. migrate extant sessions, 4. update client code" \\
   │  │    --how.gate "all auth tests pass, load test shows
   │  │      no session affinity required" \\
   │  │    --status.choice enqueued \\
   │  │    --status.reason "will start after current task" \\
   │  │    --source peer:human
   │  │
   │  └─
   │
   ├─ example: fulfill goal
   │  ├─
   │  │
   │  │  rhx goal.memory.set \\
   │  │    --slug fix-login-bug \\
   │  │    --status.choice fulfilled \\
   │  │    --status.reason "fixed in commit abc123,
   │  │      root cause was race condition in token refresh"
   │  │
   │  └─
   │
   ├─ example: block goal
   │  ├─
   │  │
   │  │  rhx goal.memory.set \\
   │  │    --slug deploy-to-prod \\
   │  │    --status.choice blocked \\
   │  │    --status.reason "blocked on security review,
   │  │      awaited infosec team approval by 2026-04-20"
   │  │
   │  └─
   │
   ├─ required fields
   │  ├─ --slug           goal identifier
   │  ├─ --why.ask        the original ask from human
   │  ├─ --why.purpose    why this matters
   │  ├─ --why.benefit    what success enables
   │  ├─ --what.outcome   expected result
   │  ├─ --how.task       work to be done
   │  └─ --how.gate       success criteria
   │
   └─ optional fields
      ├─ --status.choice  incomplete | blocked | enqueued | inflight | fulfilled
      ├─ --status.reason  reason for current status
      ├─ --covers         comma-separated ask hashes
      ├─ --source         peer:human | peer:system
      └─ --scope          route | repo (automatic — rarely needed)"
`;

exports[`goal cli output given: [case1] emitSubBucket renders connected treebucket when: [t0] render field content then: open bracket, continuation, and close bracket all connect 1`] = `
"   │  │  │  ├─
   │  │  │  │  
   │  │  │  │    fix the flaky test
   │  │  │  │  
   │  │  │  └─"
`;

exports[`goal cli output given: [case2] emitSubBucket at different indent level when: [t0] render with shallower indent then: treebucket still connects properly 1`] = `
"   │  │     ├─
   │  │     │  
   │  │     │    team can ship
   │  │     │  
   │  │     └─"
`;

exports[`goal cli output given: [case3] emitSubBucket with multiline content when: [t0] content has multiple lines then: each line is indented within the bucket 1`] = `
"   │  │  │  ├─
   │  │  │  │  
   │  │  │  │    line one
   │  │  │  │    line two
   │  │  │  │    line three
   │  │  │  │  
   │  │  │  └─"
`;

exports[`parseStdinPrompt given: [case1] valid JSON with prompt when: [t0] JSON has prompt field then: returns prompt content 1`] = `"fix the flaky test"`;

exports[`parseStdinPrompt given: [case2] empty stdin when: [t0] stdin is empty string then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case2] empty stdin when: [t1] stdin is whitespace only then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case3] malformed JSON when: [t0] JSON is invalid then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case3] malformed JSON when: [t1] JSON is truncated then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case4] JSON without prompt field when: [t0] JSON has other fields but no prompt then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case4] JSON without prompt field when: [t1] prompt field is null then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case4] JSON without prompt field when: [t2] prompt field is number then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case5] prompt is empty string when: [t0] prompt field is empty string then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case5] prompt is empty string when: [t1] prompt field is whitespace only then: returns null 1`] = `null`;

exports[`parseStdinPrompt given: [case6] prompt with special characters when: [t0] prompt has newlines then: returns prompt with newlines preserved 1`] = `
"line one
line two"
`;

exports[`parseStdinPrompt given: [case6] prompt with special characters when: [t1] prompt has unicode then: returns prompt with unicode preserved 1`] = `"fix the test 🐢"`;
